# xscrabble-v3

./: .gitignore  CLAUDE.md  CMakeLists.txt  LICENSE  Makefile  README.md  README.org
data/dictionaries/extracted/: AL_DEFINITIONS.json  AL_SHORT_DEFINITIONS.json  AL_SHORT_WORDS.txt  AL_TEMPLATE.txt  OSPD3.txt  french_dict_sample.json
docs/: build-flow.mmd  control-flow.mmd  system-architecture.mmd
docs/status/: 2025-03-11-claude-code-3.7.md  2025-03-12-claude-code-3.7.md
include/: board.h  config.h  dictionary.h  dictionary_enhanced.h  game.h  ui.h
resources/: XScrabble  dictionary.txt
scripts/: install-osx.sh
src/: al_dictionary_demo.c  board.c  dictionary.c  dictionary_demo.c  dictionary_enhanced.c  game.c  main.c  ui.c
tests/: CMakeLists.txt  run_tests.sh  test_board.c  test_dictionary.c  test_game.c
